--- a/Kconfig
+++ b/Kconfig
@@ -12,3 +12,8 @@ DT_COMPAT_ZMK_BEHAVIOR_MOUSE_SETTING := zmk,behavior-mouse-setting
 config ZMK_BEHAVIOR_MOUSE_SETTING
         bool
         default ZMK_INPUT_MOUSE_PS2 && $(dt_compat_enabled,$(DT_COMPAT_ZMK_BEHAVIOR_MOUSE_SETTING))
+DT_COMPAT_ZMK_BEHAVIOR_MOUSE_MODE := zmk,behavior-mouse-mode
+config ZMK_BEHAVIOR_MOUSE_MODE
+        bool
+        default ZMK_INPUT_MOUSE_PS2 && $(dt_compat_enabled,$(DT_COMPAT_ZMK_BEHAVIOR_MOUSE_MODE))
+        
